// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> should match snapshot 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0DFFF",
          "borderRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
      ]
    }
    variant="informative"
  >
    <Text
      flex={1}
      marginVertical="xxxsmall"
      style={
        Array [
          Object {
            "color": "#231B22",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      Feedback message.
    </Text>
  </View>
</View>
`;

exports[`<Banner /> should match snapshot with button 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0DFFF",
          "borderRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
      ]
    }
    variant="informative"
  >
    <Text
      flex={1}
      marginVertical="xxxsmall"
      style={
        Array [
          Object {
            "color": "#231B22",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      Banner with button
    </Text>
    <TouchableWithoutFeedback
      marginLeft="xxsmall"
      secondary={true}
      small={true}
      style={
        Array [
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          marginLeft="xxsmall"
          pressed={false}
          small={true}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 9999,
                "flexDirection": "row",
                "height": 32,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 16,
              },
              Object {
                "marginLeft": 8,
              },
            ]
          }
        >
          <Text
            color="#231B22"
            pressed={false}
            secondary={true}
            small={true}
            style={
              Array [
                Object {
                  "color": "#231B22",
                  "fontFamily": "Rubik",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
              ]
            }
          >
            Action
          </Text>
        </View>
      </View>
    </TouchableWithoutFeedback>
  </View>
</View>
`;

exports[`<Banner /> should match snapshot with custom variant 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1EEDB",
          "borderRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
      ]
    }
    variant="success"
  >
    <Text
      flex={1}
      marginVertical="xxxsmall"
      style={
        Array [
          Object {
            "color": "#231B22",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      Success banner without button
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0DFFF",
          "borderRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
      ]
    }
    variant="informative"
  >
    <Text
      flex={1}
      marginVertical="xxxsmall"
      style={
        Array [
          Object {
            "color": "#231B22",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      Informative banner without button
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FCD6C3",
          "borderRadius": 8,
          "display": "flex",
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
      ]
    }
    variant="attention"
  >
    <Text
      flex={1}
      marginVertical="xxxsmall"
      style={
        Array [
          Object {
            "color": "#231B22",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "marginBottom": 4,
            "marginTop": 4,
          },
        ]
      }
    >
      Attention banner without button
    </Text>
  </View>
</View>
`;
